--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "4.2.10",
+    "version": "4.2.11",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -27,10 +27,10 @@
     "types": "dist/index.d.ts",
     "bin": "dist/cli.js",
     "scripts": {
+        "": "",
         "compile": "rm -rf dist && tsc",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
-        "prepack": "npm run compile",
         "prepublishOnly": "npm run test:all",
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
@@ -43,43 +43,43 @@
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
-        "augment-vir": "3.0.2",
-        "semver": "7.3.8",
-        "simple-git": "3.14.1"
+        "augment-vir": "^3.0.3",
+        "semver": "^7.3.8",
+        "simple-git": "^3.14.1"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@open-wc/testing": "3.1.6",
-        "@types/chai": "4.3.3",
+        "@open-wc/testing": "^3.1.6",
+        "@types/chai": "^4.3.3",
         "@types/fs-extra": "^9.0.13",
-        "@types/mocha": "10.0.0",
-        "@types/node": "18.8.5",
-        "@types/semver": "7.3.12",
-        "@web/dev-server-esbuild": "0.3.2",
-        "@web/test-runner": "0.14.0",
-        "@web/test-runner-commands": "0.6.5",
-        "@web/test-runner-playwright": "0.8.10",
-        "ansi-colors": "4.1.3",
-        "augment-vir": "3.0.2",
-        "chai": "4.3.6",
-        "cspell": "6.12.0",
+        "@types/mocha": "^10.0.0",
+        "@types/node": "^18.11.7",
+        "@types/semver": "^7.3.13",
+        "@web/dev-server-esbuild": "^0.3.3",
+        "@web/test-runner": "^0.15.0",
+        "@web/test-runner-commands": "^0.6.5",
+        "@web/test-runner-playwright": "^0.9.0",
+        "ansi-colors": "^4.1.3",
+        "augment-vir": "^3.0.3",
+        "chai": "^4.3.6",
+        "cspell": "^6.12.0",
         "fs-extra": "^10.1.0",
         "istanbul-smart-text-reporter": "^0.0.1",
-        "markdown-code-example-inserter": "0.1.11",
-        "mocha": "10.0.0",
+        "markdown-code-example-inserter": "^0.1.11",
+        "mocha": "^10.1.0",
         "mocha-spec-reporter-with-file-names": "^0.0.0",
         "nyc": "^15.1.0",
-        "prettier": "2.7.1",
-        "prettier-plugin-jsdoc": "0.4.2",
-        "prettier-plugin-multiline-arrays": "1.1.1",
-        "prettier-plugin-organize-imports": "3.1.1",
-        "prettier-plugin-packagejson": "2.3.0",
-        "prettier-plugin-sort-json": "0.0.3",
-        "prettier-plugin-toml": "0.3.1",
-        "ts-node": "10.9.1",
-        "tsconfig-paths": "4.1.0",
+        "prettier": "^2.7.1",
+        "prettier-plugin-jsdoc": "^0.4.2",
+        "prettier-plugin-multiline-arrays": "^1.1.1",
+        "prettier-plugin-organize-imports": "^3.1.1",
+        "prettier-plugin-packagejson": "^2.3.0",
+        "prettier-plugin-sort-json": "^0.0.3",
+        "prettier-plugin-toml": "^0.3.1",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^4.1.0",
         "typescript": "^4.8.4",
-        "vite": "3.1.7"
+        "vite": "^3.2.0"
     },
     "engines": {
         "node": ">=16",
