--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "4.2.18",
+    "version": "4.3.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -28,14 +28,14 @@
     "bin": "dist/cli.js",
     "scripts": {
         "compile": "rm -rf dist && tsc",
+        "docs:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
+        "docs:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "prepublishOnly": "npm run test:all",
-        "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
-        "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test": "bash src/scripts/run-tests.sh",
-        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run readme:check",
+        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help",
         "test:types": "tsc --noEmit"
@@ -43,6 +43,7 @@
     "dependencies": {
         "ansi-colors": "^4.1.3",
         "augment-vir": "^3.1.2",
+        "glob": "^8.0.3",
         "semver": "^7.3.8",
         "simple-git": "^3.15.0"
     },
@@ -51,6 +52,7 @@
         "@open-wc/testing": "^3.1.7",
         "@types/chai": "^4.3.4",
         "@types/fs-extra": "^9.0.13",
+        "@types/glob": "^8.0.0",
         "@types/mocha": "^10.0.0",
         "@types/node": "^18.11.9",
         "@types/semver": "^7.3.13",
@@ -77,6 +79,7 @@
         "prettier-plugin-toml": "^0.3.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.0",
+        "type-fest": "^3.2.0",
         "typescript": "^4.8.4",
         "vite": "^3.2.3"
     },
