--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "virmator",
-    "version": "4.3.4",
-    "description": "Handle all the stuffs in one package.",
+    "version": "5.0.0",
+    "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
-        "template",
-        "vir",
+        "config",
+        "configs",
         "formatting",
+        "publish",
         "spellcheck",
-        "config"
+        "template",
+        "vir"
     ],
     "homepage": "https://github.com/electrovir/virmator",
     "bugs": {
@@ -28,8 +30,8 @@
     "bin": "dist/cli.js",
     "scripts": {
         "compile": "rm -rf dist && tsc",
-        "docs:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
-        "docs:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
+        "docs:check": "npm run compile && tsx src/scripts/save-help-message.ts check && md-code --check README.md",
+        "docs:update": "npm run compile && tsx src/scripts/save-help-message.ts && md-code README.md",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "prepublishOnly": "npm run test:all",
@@ -37,15 +39,16 @@
         "test": "bash src/scripts/run-tests.sh",
         "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
-        "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help",
+        "test:help": "tsx src/cli/cli.ts --help",
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
+        "@augment-vir/common": "^4.6.1",
+        "@augment-vir/node-js": "^4.6.1",
         "ansi-colors": "^4.1.3",
-        "augment-vir": "^3.1.2",
         "glob": "^8.0.3",
         "semver": "^7.3.8",
-        "simple-git": "^3.15.0"
+        "simple-git": "^3.15.1"
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -53,18 +56,16 @@
         "@types/chai": "^4.3.4",
         "@types/fs-extra": "^9.0.13",
         "@types/glob": "^8.0.0",
-        "@types/mocha": "^10.0.0",
-        "@types/node": "^18.11.9",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^18.11.10",
         "@types/semver": "^7.3.13",
         "@web/dev-server-esbuild": "^0.3.3",
         "@web/test-runner": "^0.15.0",
         "@web/test-runner-commands": "^0.6.5",
         "@web/test-runner-playwright": "^0.9.0",
-        "ansi-colors": "^4.1.3",
-        "augment-vir": "^3.1.2",
         "chai": "^4.3.7",
-        "cspell": "^6.14.3",
-        "fs-extra": "^10.1.0",
+        "cspell": "^6.15.1",
+        "fs-extra": "^11.1.0",
         "istanbul-smart-text-reporter": "^1.0.0",
         "markdown-code-example-inserter": "^0.1.11",
         "mocha": "^10.1.0",
@@ -73,13 +74,13 @@
         "prettier": "^2.8.0",
         "prettier-plugin-jsdoc": "^0.4.2",
         "prettier-plugin-multiline-arrays": "^1.1.1",
-        "prettier-plugin-organize-imports": "^3.2.0",
+        "prettier-plugin-organize-imports": "^3.2.1",
         "prettier-plugin-packagejson": "^2.3.0",
         "prettier-plugin-sort-json": "^0.0.3",
         "prettier-plugin-toml": "^0.3.1",
-        "ts-node": "^10.9.1",
-        "tsconfig-paths": "^4.1.0",
-        "type-fest": "^3.2.0",
+        "tsconfig-paths": "^4.1.1",
+        "tsx": "^3.12.1",
+        "type-fest": "^3.3.0",
         "typescript": "^4.9.3",
         "vite": "^3.2.4"
     },
