--- a/configs/package.json
+++ b/configs/package.json
@@ -8,7 +8,7 @@
         "docs:update": "virmator code-in-markdown",
         "format": "virmator format",
         "preview": "virmator frontend preview",
-        "publish": "virmator publish npm run compile && npm run test:all",
+        "publish": "virmator publish \"npm run compile && npm run test:all\"",
         "spellcheck": "virmator spellcheck",
         "start": "npm install && virmator frontend",
         "test": "virmator test",
