--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.2.9",
+    "version": "5.2.10",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -49,7 +49,8 @@
         "glob": "^8.0.3",
         "glob-promise": "^5.0.0",
         "semver": "^7.3.8",
-        "simple-git": "^3.15.1"
+        "simple-git": "^3.15.1",
+        "type-fest": "^3.4.0"
     },
     "devDependencies": {
         "@electrovir/nyc": "15.1.0-fix0",
@@ -81,7 +82,6 @@
         "prettier-plugin-toml": "^0.3.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.1",
-        "type-fest": "^3.4.0",
         "typescript": "^4.9.4",
         "vite": "^4.0.1"
     },
