--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.2.10",
+    "version": "5.2.11",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -36,7 +36,7 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "prepublishOnly": "npm run test:all",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
-        "test": "bash src/scripts/run-tests.sh",
+        "test": "bash ./bash-scripts/run-tests.sh",
         "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
@@ -47,29 +47,28 @@
         "@augment-vir/node-js": "^6.1.6",
         "ansi-colors": "^4.1.3",
         "glob": "^8.0.3",
-        "glob-promise": "^5.0.0",
+        "glob-promise": "5.0.0",
         "semver": "^7.3.8",
         "simple-git": "^3.15.1",
         "type-fest": "^3.4.0"
     },
     "devDependencies": {
-        "@electrovir/nyc": "15.1.0-fix0",
-        "@istanbuljs/nyc-config-typescript": "^1.0.2",
+        "@electrovir/c8": "^7.12.0-fix1",
         "@open-wc/testing": "^3.1.7",
         "@types/chai": "^4.3.4",
         "@types/fs-extra": "^9.0.13",
         "@types/glob": "^8.0.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.11.16",
+        "@types/node": "^18.11.17",
         "@types/semver": "^7.3.13",
         "@web/dev-server-esbuild": "^0.3.3",
         "@web/test-runner": "^0.15.0",
         "@web/test-runner-commands": "^0.6.5",
         "@web/test-runner-playwright": "^0.9.0",
         "chai": "^4.3.7",
-        "cspell": "^6.17.0",
+        "cspell": "^6.18.0",
         "fs-extra": "^11.1.0",
-        "istanbul-smart-text-reporter": "^1.1.0",
+        "istanbul-smart-text-reporter": "^1.1.1",
         "markdown-code-example-inserter": "^0.1.13",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
@@ -78,12 +77,12 @@
         "prettier-plugin-multiline-arrays": "^1.1.2",
         "prettier-plugin-organize-imports": "^3.2.1",
         "prettier-plugin-packagejson": "^2.3.0",
-        "prettier-plugin-sort-json": "^0.0.3",
+        "prettier-plugin-sort-json": "^1.0.0",
         "prettier-plugin-toml": "^0.3.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.1",
         "typescript": "^4.9.4",
-        "vite": "^4.0.1"
+        "vite": "^4.0.3"
     },
     "engines": {
         "node": ">=16",
