--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.2.11",
+    "version": "5.2.12",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -47,7 +47,7 @@
         "@augment-vir/node-js": "^6.1.6",
         "ansi-colors": "^4.1.3",
         "glob": "^8.0.3",
-        "glob-promise": "5.0.0",
+        "glob-promise": "^6.0.0",
         "semver": "^7.3.8",
         "simple-git": "^3.15.1",
         "type-fest": "^3.4.0"
