--- a/configs/package.json
+++ b/configs/package.json
@@ -12,7 +12,8 @@
         "spellcheck": "virmator spellcheck",
         "start": "npm install && virmator frontend",
         "test": "virmator test",
-        "test:all": "npm run test:types && npm test && npm run spellcheck && npm run test:format && npm run test:docs",
+        "test:all": "npm run test:types && npm test:coverage && npm run spellcheck && npm run test:format && npm run test:docs",
+        "test:coverage": "virmator test coverage",
         "test:docs": "virmator code-in-markdown check",
         "test:format": "virmator format check",
         "test:types": "tsc --noEmit",
