--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.2.12",
+    "version": "5.3.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -80,6 +80,7 @@
         "prettier-plugin-packagejson": "^2.3.0",
         "prettier-plugin-sort-json": "^0.0.3",
         "prettier-plugin-toml": "^0.3.1",
+        "test-established-expectations": "^0.0.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.1",
         "typescript": "^4.9.4",
