--- a/configs/.vscode/settings.json
+++ b/configs/.vscode/settings.json
@@ -41,5 +41,8 @@
     "editor.formatOnSave": true,
     "editor.rulers": [100],
     "editor.wordWrapColumn": 100,
+    "files.associations": {
+        "*.svg": "html"
+    },
     "typescript.tsdk": "node_modules/typescript/lib"
 }
