--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.5.0",
+    "version": "5.6.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,8 +43,8 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^12.10.0",
-        "@augment-vir/node-js": "^12.10.0",
+        "@augment-vir/common": "^12.11.2",
+        "@augment-vir/node-js": "^12.11.2",
         "ansi-colors": "^4.1.3",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
@@ -58,14 +58,15 @@
         "@open-wc/testing": "^3.1.7",
         "@types/chai": "^4.3.4",
         "@types/fs-extra": "^11.0.1",
-        "@types/glob": "^8.0.1",
+        "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.14.0",
+        "@types/node": "^18.14.1",
         "@types/semver": "^7.3.13",
         "@web/dev-server-esbuild": "^0.3.3",
-        "@web/test-runner": "^0.15.0",
+        "@web/test-runner": "^0.15.1",
         "@web/test-runner-commands": "^0.6.5",
         "@web/test-runner-playwright": "^0.9.0",
+        "@web/test-runner-visual-regression": "^0.7.0",
         "chai": "^4.3.7",
         "cspell": "^6.26.3",
         "fs-extra": "^11.1.0",
@@ -85,7 +86,7 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
         "typescript": "^4.9.5",
-        "vite": "^4.1.2"
+        "vite": "^4.1.4"
     },
     "engines": {
         "node": ">=16",
