--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "prepublishOnly": "npm run test:all",
         "publish": "virmator publish \"npm run test:all\"",
-        "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test": "IGNORE_VIRMATOR_STACK_TRACE=true test-as-package mocha --config mocha.config.js",
-        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run docs:check",
+        "test:all": "npm run test && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
+        "test:spelling": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^12.13.0",
-        "@augment-vir/node-js": "^12.13.0",
+        "@augment-vir/common": "^13.2.1",
+        "@augment-vir/node-js": "^13.2.1",
         "ansi-colors": "^4.1.3",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
         "semver": "^7.3.8",
-        "simple-git": "^3.16.1",
+        "simple-git": "^3.17.0",
         "type-fest": "^3.6.1"
     },
     "devDependencies": {
@@ -61,21 +61,21 @@
         "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.14.2",
+        "@types/node": "^18.15.5",
         "@types/semver": "^7.3.13",
-        "@web/dev-server-esbuild": "^0.3.3",
+        "@web/dev-server-esbuild": "^0.3.4",
         "@web/test-runner": "^0.15.1",
         "@web/test-runner-commands": "^0.6.5",
         "@web/test-runner-playwright": "^0.9.0",
         "@web/test-runner-visual-regression": "^0.7.0",
         "chai": "^4.3.7",
-        "cspell": "^6.27.0",
-        "fs-extra": "^11.1.0",
+        "cspell": "^6.30.2",
+        "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.1",
         "markdown-code-example-inserter": "^0.3.0",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "prettier": "^2.8.4",
+        "prettier": "^2.8.6",
         "prettier-plugin-interpolated-html-tags": "^0.0.3",
         "prettier-plugin-jsdoc": "^0.4.2",
         "prettier-plugin-multiline-arrays": "^1.1.3",
@@ -87,9 +87,9 @@
         "test-established-expectations": "^0.3.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
-        "typescript": "^4.9.5",
-        "virmator": "^6.2.0",
-        "vite": "^4.1.4"
+        "typescript": "^5.0.2",
+        "virmator": "^6.2.1",
+        "vite": "^4.2.1"
     },
     "engines": {
         "node": ">=16",
