--- a/configs/package.json
+++ b/configs/package.json
@@ -1,5 +1,5 @@
 {
-    "license": "MIT",
+    "license": "(MIT or CC0 1.0)",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
