--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.2.3",
+    "version": "6.3.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -35,7 +35,7 @@
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "publish": "virmator publish \"npm run test:all\"",
-        "test": "IGNORE_VIRMATOR_STACK_TRACE=true test-as-package mocha --config mocha.config.js",
+        "test": "test-as-package mocha --config mocha.config.js",
         "test:all": "npm ci && npm run compile && npm run test && npm ci && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
@@ -86,8 +86,8 @@
         "test-established-expectations": "^0.3.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.2",
-        "virmator": "^6.2.2",
+        "typescript": "^5.0.3",
+        "virmator": "^6.2.3",
         "vite": "^4.2.1"
     },
     "engines": {
