--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.3.1",
+    "version": "6.3.2",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,8 +43,8 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^13.2.2",
-        "@augment-vir/node-js": "^13.2.2",
+        "@augment-vir/common": "13.2.2",
+        "@augment-vir/node-js": "13.2.2",
         "ansi-colors": "^4.1.3",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
