--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.3.4",
+    "version": "6.4.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -35,7 +35,7 @@
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "publish": "virmator publish \"npm run test:all\"",
-        "test": "test-as-package mocha --config mocha.config.js",
+        "test": "npm run compile && test-as-package mocha --config mocha.config.js",
         "test:all": "npm ci && npm run compile && npm run test && npm ci && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
@@ -62,18 +62,20 @@
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.15.11",
         "@types/semver": "^7.3.13",
-        "@web/dev-server-esbuild": "^0.3.5",
-        "@web/test-runner": "^0.15.2",
-        "@web/test-runner-commands": "^0.6.5",
+        "@web/dev-server-esbuild": "^0.3.6",
+        "@web/test-runner": "^0.15.3",
+        "@web/test-runner-commands": "^0.6.6",
         "@web/test-runner-playwright": "^0.9.0",
-        "@web/test-runner-visual-regression": "^0.7.0",
+        "@web/test-runner-visual-regression": "^0.7.1",
         "chai": "^4.3.7",
         "cspell": "^6.31.1",
+        "esbuild": "^0.17.15",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.1",
         "markdown-code-example-inserter": "^0.3.0",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
+        "npm-check-updates": "^16.10.2",
         "prettier": "^2.8.7",
         "prettier-plugin-interpolated-html-tags": "^0.0.3",
         "prettier-plugin-jsdoc": "^0.4.2",
@@ -87,7 +89,7 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.0.3",
-        "virmator": "^6.3.3",
+        "virmator": "^6.3.4",
         "vite": "^4.2.1",
         "vite-tsconfig-paths": "^4.0.8"
     },
