--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.4.2",
+    "version": "6.4.3",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,20 +43,19 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "13.2.3",
-        "@augment-vir/node-js": "13.2.3",
+        "@augment-vir/common": "^13.2.4",
+        "@augment-vir/node-js": "^13.2.4",
         "ansi-colors": "^4.1.3",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
-        "npm-check-updates": "^16.10.7",
-        "semver": "^7.3.8",
+        "semver": "^7.4.0",
         "simple-git": "^3.17.0",
         "type-fest": "^3.8.0"
     },
     "devDependencies": {
         "@electrovir/nyc": "15.1.0-fix0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@open-wc/testing": "^3.1.7",
+        "@open-wc/testing": "^3.1.8",
         "@types/chai": "^4.3.4",
         "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.1.0",
@@ -70,12 +69,13 @@
         "@web/test-runner-visual-regression": "^0.7.1",
         "chai": "^4.3.7",
         "cspell": "^6.31.1",
-        "esbuild": "^0.17.15",
+        "esbuild": "^0.17.17",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.1",
         "markdown-code-example-inserter": "^0.3.0",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
+        "npm-check-updates": "^16.10.8",
         "prettier": "^2.8.7",
         "prettier-plugin-interpolated-html-tags": "^0.0.3",
         "prettier-plugin-jsdoc": "^0.4.2",
@@ -88,10 +88,10 @@
         "test-established-expectations": "^0.3.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.3",
-        "virmator": "^6.4.0",
+        "typescript": "^5.0.4",
+        "virmator": "^6.4.2",
         "vite": "^4.2.1",
-        "vite-tsconfig-paths": "^4.0.8"
+        "vite-tsconfig-paths": "^4.2.0"
     },
     "engines": {
         "node": ">=16",
