--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "publish": "virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.js",
-        "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
+        "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto --names tests,spelling,format,docs \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
         "test:spelling": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
