--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.6.4",
+    "version": "6.6.5",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,40 +43,40 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^14.2.2",
-        "@augment-vir/node-js": "^14.2.2",
+        "@augment-vir/common": "^15.2.1",
+        "@augment-vir/node-js": "^15.2.1",
         "ansi-colors": "^4.1.3",
-        "concurrently": "^8.1.0",
+        "concurrently": "^8.2.0",
         "glob": "^8.1.0",
-        "glob-promise": "^6.0.2",
-        "semver": "^7.5.1",
+        "glob-promise": "^6.0.3",
+        "semver": "^7.5.3",
         "simple-git": "^3.19.0",
-        "type-fest": "^3.11.1"
+        "type-fest": "^3.12.0"
     },
     "devDependencies": {
         "@electrovir/nyc": "15.1.0-fix0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@open-wc/testing": "^3.1.8",
+        "@open-wc/testing": "^3.2.0",
         "@types/chai": "^4.3.5",
         "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^20.2.5",
+        "@types/node": "^20.3.1",
         "@types/semver": "^7.5.0",
         "@web/dev-server-esbuild": "^0.4.1",
         "@web/test-runner": "^0.16.1",
         "@web/test-runner-commands": "^0.7.0",
-        "@web/test-runner-playwright": "^0.10.0",
+        "@web/test-runner-playwright": "^0.10.1",
         "@web/test-runner-visual-regression": "^0.8.0",
         "chai": "^4.3.7",
         "cspell": "^6.31.1",
-        "esbuild": "^0.17.19",
+        "esbuild": "^0.18.7",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.2",
         "markdown-code-example-inserter": "^0.3.1",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "npm-check-updates": "^16.10.12",
+        "npm-check-updates": "^16.10.13",
         "prettier": "^2.8.8",
         "prettier-plugin-interpolated-html-tags": "^0.0.4",
         "prettier-plugin-jsdoc": "^0.4.2",
@@ -89,13 +89,16 @@
         "test-established-expectations": "^0.5.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.4",
-        "virmator": "^6.6.1",
+        "typescript": "^5.1.3",
+        "virmator": "^6.6.4",
         "vite": "^4.3.9",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "engines": {
         "node": ">=16",
         "npm": ">=8"
+    },
+    "overrides": {
+        "semver": "^7.5.3"
     }
 }
