--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@web/test-runner-visual-regression": "^0.8.0",
         "chai": "^4.3.7",
         "cspell": "^6.31.1",
+        "element-vir": "^14.0.3",
         "esbuild": "^0.18.11",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.2",
