--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "7.3.1",
+    "version": "7.3.2",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,15 +43,15 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^16.2.0",
-        "@augment-vir/node-js": "^16.2.0",
+        "@augment-vir/common": "^16.4.0",
+        "@augment-vir/node-js": "^16.4.0",
         "ansi-colors": "^4.1.3",
-        "concurrently": "^8.2.0",
+        "concurrently": "^8.2.1",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.3",
         "semver": "^7.5.4",
         "simple-git": "^3.19.1",
-        "type-fest": "^4.1.0"
+        "type-fest": "^4.2.0"
     },
     "devDependencies": {
         "@electrovir/nyc": "15.1.0-fix0",
@@ -61,38 +61,38 @@
         "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^20.4.7",
+        "@types/node": "^20.5.6",
         "@types/semver": "^7.5.0",
         "@web/dev-server-esbuild": "^0.4.1",
         "@web/test-runner": "^0.17.0",
         "@web/test-runner-commands": "^0.8.0",
         "@web/test-runner-playwright": "^0.10.1",
         "@web/test-runner-visual-regression": "^0.8.2",
-        "chai": "^4.3.7",
-        "cspell": "^6.31.2",
-        "element-vir": "^16.3.0",
-        "esbuild": "^0.18.17",
+        "chai": "^4.3.8",
+        "cspell": "^7.0.1",
+        "element-vir": "^16.3.1",
+        "esbuild": "^0.19.2",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.2",
         "markdown-code-example-inserter": "^0.3.1",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "npm-check-updates": "^16.10.17",
+        "npm-check-updates": "~16.12.3",
         "prettier": "^2.8.8",
         "prettier-plugin-interpolated-html-tags": "^0.0.4",
         "prettier-plugin-jsdoc": "^0.4.2",
         "prettier-plugin-multiline-arrays": "^2.0.0",
         "prettier-plugin-organize-imports": "^3.2.3",
         "prettier-plugin-packagejson": "^2.4.5",
-        "prettier-plugin-sort-json": "^1.0.0",
+        "prettier-plugin-sort-json": "^2.0.0",
         "prettier-plugin-toml": "^0.3.1",
         "test-as-package": "^0.0.4",
         "test-established-expectations": "^0.5.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.6",
-        "virmator": "^7.3.0",
-        "vite": "^4.4.8",
+        "typescript": "^5.2.2",
+        "virmator": "^7.3.1",
+        "vite": "^4.4.9",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "engines": {
