--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -40,7 +40,8 @@
         "mri": "^1.2.0",
         "run-time-assertions": "^1.5.2",
         "semver": "^7.6.3",
-        "simple-git": "^3.25.0"
+        "simple-git": "^3.25.0",
+        "url-vir": "^1.5.0"
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
